Adding TopUp endpoint, adding HTTP response codes, fixed API spec
