# swagger_server/services/payment_service.py
@@ -1,41 +1,12 @@
-#
-#{
-#  "from": "Bislich",
-#  "issuedAt": "2021-04-11T15:45:57.643Z",
-#  "issuedBy": "3fa85f64-5717-4562-b3fc-2c963f66afa6",
-#  "payment": {
-#    "amount": 0,
-#    "uuid": "3fa85f64-5717-4562-b3fc-2c963f66afa6"
-#  },
-#  "positions": [
-#    {
-#      "count": 0,
-#      "fare": {
-#        "fare": 5,
-#        "ticketClass": {
-#          "bicycle": true,
-#          "reduced": true,
-#          "return": true,
-#          "staff": true
-#        }
-#      }
-#    }
-#  ],
-#  "returnValid": true,
-#  "saleCounter": 0,
-#  "signature": "string",
-#  "uuid": "3fa85f64-5717-4562-b3fc-2c963f66afa6"
-#}
-
-#["FährCard", "Cash", "ECCard", "BankTransfer", "PayPal"]
 from uuid import uuid4
 
 from typing import Optional
 
-from swagger_server.models import FaehrCardPayment, TicketSaleFaehrCard, TicketSaleCash, CashPayment
+from swagger_server.models import FaehrCardPayment, TicketSaleFaehrCard, TicketSaleCash, CashPayment, TopUp
 from swagger_server.dao import payment_dao as PaymentDao
 from swagger_server.dao import faehrcard_dao as FaehrcardDao
 from swagger_server.dao import ticket_sale_dao as TicketSaleDao
+from swagger_server.dao import top_up_dao as TopUpDao
 
 
 def create_ticket_sale_faehrcard(ticket_sale_faehrcard: TicketSaleFaehrCard):
@@ -43,12 +14,31 @@ def create_ticket_sale_faehrcard(ticket_sale_faehrcard: TicketSaleFaehrCard):
     if uuid:
         ticket_sale_faehrcard.faehr_card_payment = uuid
         TicketSaleDao.insert_faehrcard(ticket_sale_faehrcard)
+        return None, 201
 
 
 def create_ticket_sale_cash(ticket_sale_cash: TicketSaleCash):
     uuid = create_cash_payment(ticket_sale_cash.cash_payment)
     if uuid:
-        TicketSaleDao.insert()
+        ticket_sale_cash.cash_payment = uuid
+        TicketSaleDao.insert_cash(ticket_sale_cash)
+        return None, 201
+
+
+def top_up_faehrcard(top_up: TopUp):
+    faehr_card = FaehrcardDao.find_by_uuid(top_up.card)
+    if faehr_card:
+        uuid = create_cash_payment(top_up.payment)
+        if uuid:
+            top_up.payment = uuid
+            TopUpDao.insert_cash(top_up)
+            faehr_card.balance = faehr_card.balance + top_up.amount
+            TopUpDao.insert_cash(top_up)
+            FaehrcardDao.update(faehr_card)
+            return {"newbalance": faehr_card.balance}, 201
+    else:
+        return 'no FaehrCard with given uuid found', 404
+    return None
 
 
 def create_faehrcard_payment(faehrcard_payment: FaehrCardPayment) -> Optional[str]:
@@ -76,4 +66,3 @@ def create_cash_payment(cash_payment: CashPayment) -> Optional[str]:
         return uuid
     else:
         return None
-
